# PasabuySafe

./: .gitignore  Cargo.toml  README.md  package-lock.json
.github/workflows/: ci.yml
demo/: README.md  index.html
docs/: AI_AGENT_INSTRUCTIONS.md  API_SPEC.md  ARCHITECTURE.md  DATABASE.md  DEMO_VIDEO_SCRIPT.md  DEPLOYMENT.md  MVP_CHECKLIST.md  PRD.md  SMART_CONTRACT_SPEC.md  USER_STORIES.md  UX_UI_SPEC.md  WEBSITE_PLAN.md
pasabuy-safe-web/: package-lock.json  package.json
pasabuy-safe-web/src/app/: globals.css  layout.tsx  page.tsx
pasabuy-safe-web/src/app/auth/: page.tsx
pasabuy-safe-web/src/app/dashboard/: page.tsx
pasabuy-safe-web/src/app/explore/: page.tsx
pasabuy-safe-web/src/app/faq/: page.tsx
pasabuy-safe-web/src/components/dashboard/: ParticipantList.tsx  TransactionHistory.tsx
pasabuy-safe-web/src/components/escrow/: CancelOrderDialog.tsx  CancelPasabuyDialog.tsx  ClaimRefundButton.tsx  ConfirmDelivery.tsx  DepositForm.tsx  JoinForm.tsx  MarkDeliveredButton.tsx  RefundButton.tsx
pasabuy-safe-web/src/components/layout/: Header.tsx  Logo.tsx  (+1 more)
scripts/: check-contract-id.sh
src/: lib.rs  test.rs
supabase/migrations/: 001_initial_schema.sql  002_add_profile_fields.sql  003_add_group_buy_details.sql  004_storage_buckets.sql  005_pasabuy_management_enhancements.sql  006_fix_participant_rls.sql  007_add_order_details.sql
test_snapshots/test/: test_duplicate_deposit_rejected.1.json  test_full_lifecycle.1.json  test_invalid_status_transitions.1.json  test_refund_after_expiration.1.json  test_refund_before_expiration_rejected.1.json
(+24 files in other folders)
